# logisticspulse

./: .replit  add_motive_fleet.py  app.py  create_active_loads.py  create_test_data.py  loads.json  main.py  models.py  pyproject.toml  replit.md  sync_motive_data.py  test_utils.py
attached_assets/: Pasted-Absolutely-Chap-Let-s-bring-your-app-to-life-with-bold-creative-direction-gamified-energy-and-mo-1747815800032.txt  Pasted-This-is-super-helpful-thanks-Chap-Based-on-your-file-structure-and-UI-here-s-how-we-ll-move-fo-1748060965344.txt
attached_assets/routes/: drivers.py  imports.py
attached_assets/services/: google_maps_api.py  loads_service.py  motive_api.py  motive_oauth.py
attached_assets/templates/: assign_load.html  create_load.html  dashboard.html  (+2 more)
routes/: assets.py  assignments.py  auth.py  availability.py  dashboard.py  drivers.py  geofencing.py  imports.py  loads.py  notifications.py  temperature.py
services/: geofencing.py  google_maps_api.py  loads_service.py  logger.py  motive_api.py  motive_api_key.py  motive_oauth.py  motive_sync.py  notification_service.py  ocr_parser.py  pdf_extractor.py  pdf_extractor_advanced.py  pdf_extractor_ai_only.py  pdf_extractor_ocr_ai.py  pdf_extractor_simple.py  temp_stick_api.py
templates/: assign_load.html  availability.html  create_load.html  create_load_from_ai.html  dashboard.html  dashboard_preview.html  driver_detail.html  drivers.html  import_selector.html  layout.html  load_detail.html  loads.html  login.html  notifications.html  register.html  scorecards.html  temperature.html
utils/: storage.py
(+12 files in other folders)
