[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.11.6",
    "tabula-py>=2.10.0",
    "pymupdf>=1.26.0",
    "openai>=1.82.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "opencv-python>=4.11.0.86",
    "twilio>=9.6.2",
]
